[Design/Core] Prevent long titles from wrapping in the page header.

--- a/app/assets/stylesheets/cartilage/core.css.less
+++ b/app/assets/stylesheets/cartilage/core.css.less
@@ -151,6 +151,10 @@ body
     color: rgba(0, 0, 0, 0.7);
     text-shadow: 0 1px 0px rgba(255, 255, 255, 0.9);
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     small
     {
       position: relative;
